--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!--header-->
 	<div class="header">
 		<div class="container">
-			<div class="header__nav">
+			<nav class="header__nav">
 				<ul class="header__list">
 					<li class="header__item">
 					 	<a href="#" class="header__link">Home</a>
@@ -32,7 +32,7 @@
 					 	<a href="#contacts" class="header__link">Contacts</a>
 					</li>
 				</ul>
-			</div>	
+			</nav>	
 		</div>
 	</div>
 
@@ -42,13 +42,9 @@
 		<div class="container">
 			<div class="intro__wraper">
 				<div class="intro__info">
-					<div><h1>Denis</br>Novik</h1></div>
-					<div class="intro__intro">
-						<h3>UX | UI designer</br>24 years old, Minsk</h3>
-					</div>
-					<div class="intro__vertical">
-						<p>RU | ENG</p> 
-					</div>
+					<h1>Denis</br>Novik</h1>
+					<h3>UX | UI designer</br>24 years old, Minsk</h3>
+						<p class="intro__vertical">RU | ENG</p> 
 				</div>	
 				<div class="intro__img">
 					<img src="./img/image2.png" alt="сори">
@@ -58,7 +54,7 @@
 	</div>
 
 	<!--About me-->
-	<div class="about" id = 'about'>
+	<div class="about" id='about'>
 		<div class="about__content">
 			<h2>About me</h2>
 			<div class="about__text">
@@ -76,7 +72,7 @@
 	
 
 	<!--skills-->
-	<div class="skills" id = 'skills'>
+	<div class="skills" id='skills'>
 		<div class="container">
 			<div class="skills__wrapper">
 				<div class="skils__h">
@@ -194,7 +190,7 @@
 	</div>
 
 	<!--Portfolio-->
-	<div class="portfolio" id = 'portfolio'>
+	<div class="portfolio" id='portfolio'>
 		<div class="container">
 			<div class="portfolio__h">
 					<h2>Portfolio</h2>	
@@ -230,7 +226,7 @@
 
 
 	<!--comtacts-->
-	<div class="contacts" id = 'contacts'>
+	<div class="contacts" id='contacts'>
 		<div class="contacts__h2">
 			<h2>Contacts</h2>
 		</div>
