--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
 		<div class="container">
 			<div class="intro__wraper">
 				<div class="intro__info">
-					<h1>Denis</br>Novik</h1>
-					<h3>UX | UI designer</br>24 years old, Minsk</h3>
-						<p class="intro__vertical">RU | ENG</p> 
+					<div class="intro__p1">
+						<p>Denis</p>
+						<p>Novik</p>
+					</div>
+					<div class="intro__p2">
+						<p>UX | UI designer</p>
+						<p>24 years old, Minsk</p>
+					</div>
+					<p class="intro__vertical">RU | ENG</p> 
 				</div>	
-				<div class="intro__img">
-					<img src="./img/image2.png" alt="сори">
-				</div>
+				<img class="intro__img" src="./img/image2.png" alt="сори">
+				
 			</div>
 		</div>
 	</div>
@@ -75,14 +80,13 @@
 	<div class="skills" id='skills'>
 		<div class="container">
 			<div class="skills__wrapper">
-				<div class="skils__h">
+				<div class="skills__h">
 					<h2>Skills</h2>
 				</div>
-				<div class="skils__p">
-					<h3> I work in such programs as</h3>
-				</div>
-				<div class="skils__panel">
-					<div class="skils__element">
+				<p class="skills__p"> I work in such programs as </p>
+				<div class="skills__panel">
+				<ul class="skills__list">
+					<li class="skills__element">
 						<div class="ims__skill">
 							<img src="./img/ps.png" alt="сори">
 						</div>
@@ -106,8 +110,8 @@
 								<img src="./img/StarHollow.png" alt="+">	
 							</div>
 						</div>
-					</div>
-					<div class="skils__element">
+					</li>
+					<li class="skills__element">
 						<div class="ims__skill">
 							<img src="./img/ai.png" alt="сори">
 						</div>
@@ -131,8 +135,8 @@
 								<img src="./img/StarHollow.png" alt="+">	
 							</div>
 						</div>
-					</div>
-					<div class="skils__element">
+					</li>
+					<li class="skills__element">
 						<div class="ims__skill">
 							<img src="./img/ae.png" alt="сори">
 						</div>
@@ -156,8 +160,8 @@
 								<img src="./img/StarHollow.png" alt="+">	
 							</div>
 						</div>
-					</div>
-					<div class="skils__element">
+					</li>
+					<li class="skills__element">
 						<div class="ims__skill">
 							<img src="./img/fg.png" alt="сори">
 						</div>
@@ -181,7 +185,8 @@
 								<img src="./img/StarHollow.png" alt="+">	
 							</div>
 						</div>
-					</div>
+					</li>
+				</ul>
 				</div>
 			</div>
 		</div>
