--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</div>
 					<p class="intro__vertical">RU | ENG</p> 
 				</div>	
-				<img class="intro__img" src="./img/image2.png" alt="сори">
+				<img class="intro__img" src="./img/image2.png" alt="Фото Денис Новик">
 				
 			</div>
 		</div>
@@ -85,112 +85,111 @@
 				</div>
 				<p class="skills__p"> I work in such programs as </p>
 				<div class="skills__panel">
-				<ul class="skills__list">
-					<li class="skills__element">
-						<div class="ims__skill">
-							<img src="./img/ps.png" alt="сори">
-						</div>
-						<div class="name__skill">
-							<p> Adobe Photoshop</p>
-						</div>
-						<div class="panel__star">
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+					<ul class="skills__list">
+						<li class="skills__item">
+							<div class="ims__skill">
+								<img src="./img/ps.png" alt="Adobe Photoshop">
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="name__skill">
+								<p> Adobe Photoshop</p>
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="panel__star">
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/StarHollow.png" alt="">	
+								</div>
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+						</li>
+						<li class="skills__item">
+							<div class="ims__skill">
+								<img src="./img/ai.png" alt="Adobe Illustrator">
 							</div>
-							<div class="star__element">
-								<img src="./img/StarHollow.png" alt="+">	
+							<div class="name__skill">
+								<p> Adobe Illustrator</p>
 							</div>
-						</div>
-					</li>
-					<li class="skills__element">
-						<div class="ims__skill">
-							<img src="./img/ai.png" alt="сори">
-						</div>
-						<div class="name__skill">
-							<p> Adobe Illustrator</p>
-						</div>
-						<div class="panel__star">
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="panel__star">
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/StarHollow.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/StarHollow.png" alt="">	
+								</div>
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+						</li>
+						<li class="skills__item">
+							<div class="ims__skill">
+								<img src="./img/ae.png" alt="Adobe After Effects">
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="name__skill">
+								<p>Adobe After Effects</p>
 							</div>
-							<div class="star__element">
-								<img src="./img/StarHollow.png" alt="+">	
+							<div class="panel__star">
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/StarHollow.png" alt="">	
+								</div>
 							</div>
-							<div class="star__element">
-								<img src="./img/StarHollow.png" alt="+">	
+						</li>
+						<li class="skills__item">
+							<div class="ims__skill">
+								<img src="./img/fg.png" alt="Figma">
 							</div>
-						</div>
-					</li>
-					<li class="skills__element">
-						<div class="ims__skill">
-							<img src="./img/ae.png" alt="сори">
-						</div>
-						<div class="name__skill">
-							<p>Adobe After Effects</p>
-						</div>
-						<div class="panel__star">
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="name__skill">
+								<p>Figma</p>
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
+							<div class="panel__star">
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/Star.png" alt="">	
+								</div>
+								<div class="star__element">
+									<img src="./img/StarHollow.png" alt="">	
+								</div>
 							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/StarHollow.png" alt="+">	
-							</div>
-						</div>
-					</li>
-					<li class="skills__element">
-						<div class="ims__skill">
-							<img src="./img/fg.png" alt="сори">
-						</div>
-						<div class="name__skill">
-							<p>Figma</p>
-						</div>
-						<div class="panel__star">
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/Star.png" alt="+">	
-							</div>
-							<div class="star__element">
-								<img src="./img/StarHollow.png" alt="+">	
-							</div>
-						</div>
-					</li>
-				</ul>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-		
 			
 	</div>
 
@@ -200,32 +199,20 @@
 			<div class="portfolio__h">
 					<h2>Portfolio</h2>	
 			</div>
-			<div class="portfolio__list">
-				<div class="portfolio__el">
-					<div class="portfolio__img">
-						<img src="./img/Portfolio1.jpg" alt="">	
-					</div>
-					<div class="portfolio__text">
-							<a class="portfolio__link" href="https://www.online-fashion.ru/		">Online fashion store- Homepage</a>
-					</div>
-				</div>
-				<div class="portfolio__el">
-					<div class="portfolio__img">
-							<img src="./img/Portfolio2.jpg" alt="">	
-					</div>
-					<div class="portfolio__text">
-						<a class="portfolio__link" href="https://www.reebok.ru/">	Reebok Store - Concept</a>
-					</div>
-				</div>
-				<div class="portfolio__el">
-					<div class="portfolio__img">
-						<img src="./img/Portfolio3.jpg" alt="">	
-					</div>
-					<div class="portfolio__text">
-						<a class="portfolio__link" href="https://braun-russia.ru/">	Braun Landing Page - Concept</a>
-					</div>
-				</div>
-			</div>
+			<ul class="portfolio__list">
+				<li class="portfolio__item">
+					<img class="portfolio__img" src="./img/Portfolio1.jpg" alt="Online fashion store">	
+					<a class="portfolio__link" href="https://www.online-fashion.ru/		">Online fashion store- Homepage</a>
+				</li>
+				<li class="portfolio__item">
+					<img  class="portfolio__img" src="./img/Portfolio2.jpg" alt="Reebok Store">	
+					<a class="portfolio__link" href="https://www.reebok.ru/">	Reebok Store - Concept</a>
+				</li>
+				<li class="portfolio__item">
+					<img class="portfolio__img" src="./img/Portfolio3.jpg" alt="Braun Landing Page - Concept">	
+					<a class="portfolio__link" href="https://braun-russia.ru/">	Braun Landing Page - Concept</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 
@@ -236,33 +223,35 @@
 			<h2>Contacts</h2>
 		</div>
 		<div class="contacts__h3">
-			<h3>Want to know more or just chat?</br>You are welcome!</h3>
+			<h3>Want to know more or just chat?</h3>
+			<h3>You are welcome!</h3>
 		</div>
 		<a class= "btn btn--black" href="https://mail.google.com/mail/u/0/#inbox">Send message</a>
 		<div class="contacts__iconlist">
-			<div class="contacts__iconelement">
+			<div class="contacts__iconeitem">
 				<a href="https://www.linkedin.com/">
-					<img src="./img/contacts1.png" alt="сори" href="https://braun-russia.ru/">
+					<img src="./img/contacts1.png" alt="linkedin" href="https://braun-russia.ru/">
 				</a>
 			</div>
-			<div class="contacts__iconelement">
+			<div class="contacts__iconeitem">
 				<a href="https://www.instagram.com/">	
-					<img src="./img/contacts2.png" alt="сори" href="https://braun-russia.ru/">
+					<img src="./img/contacts2.png" alt="instagram" href="https://braun-russia.ru/">
 				</a>
 			</div>
-			<div class="contacts__iconelement">
+			<div class="contacts__iconeitem">
 				<a href="https://www.behance.net/">
-					<img src="./img/contacts3.png" alt="сори" href="https://braun-russia.ru/">
+					<img src="./img/contacts3.png" alt="behance" href="https://braun-russia.ru/">
 				</a>
 			</div>
-			<div class="contacts__iconelement">
+			<div class="contacts__iconeitem">
 				<a href="https://dribbble.com/">
-					<img src="./img/contacts4.png" alt="сори" href="https://braun-russia.ru/">
+					<img src="./img/contacts4.png" alt="dribbble" href="https://braun-russia.ru/">
 				</a>
 			</div>
 		</div>
 		<div class="contacts__footer">
-				<p>Like me on </br>LinkedIn, Instagram, Behance, Dribble</p>
+				<p>Like me on</p>
+				<p>LinkedIn, Instagram, Behance, Dribble</p>
 		</div>
 	</div>
 </body>
