--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<p>24 years old, Minsk</p>
 					</div>
 					<p class="intro__vertical">RU | ENG</p> 
-				</div>	
-				<img class="intro__img" src="./img/image2.png" alt="Фото Денис Новик">
-				
+				</div>
+			</div>
+			<div class="IMGTEST">
 			</div>
 		</div>
 	</div>
