screen adaptive start

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Denis Novik</title>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/adaptiv.css">
+	
 </head>
 <body>
 
@@ -52,25 +52,28 @@
 					</div>
 					<p class="intro__vertical">RU | ENG</p> 
 				</div>
+				<div class="IMGTEST">
 			</div>
-			<div class="IMGTEST">
+			
 			</div>
 		</div>
 	</div>
 
 	<!--About me-->
 	<div class="about" id='about'>
-		<div class="about__content">
-			<h2>About me</h2>
-			<div class="about__text">
-				<h3>
-					Hi, I'm Denis – UX/UI designer from Minsk.</br>
-					I'm interested in design and everything connected with it. </br></br>
-					I'm studying at courses "Web and mobile design</br>
-					interfaces" in IT-Academy.</br></br>
-					Ready to implement excellent projects</br>
-					with wonderful people.
-				</h3>
+		<div class="about__wrapper">	
+			<div class="about__content">
+				<h2>About me</h2>
+				<div class="about__text">
+					<h3>
+						Hi, I'm Denis – UX/UI designer from Minsk.</br>
+						I'm interested in design and everything connected with it. </br></br>
+						I'm studying at courses "Web and mobile design</br>
+						interfaces" in IT-Academy.</br></br>
+						Ready to implement excellent projects</br>
+						with wonderful people.
+					</h3>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -189,70 +192,73 @@
 					</ul>
 				</div>
 			</div>
-		</div>
-			
+		</div>	
 	</div>
 
 	<!--Portfolio-->
 	<div class="portfolio" id='portfolio'>
 		<div class="container">
-			<div class="portfolio__h">
-					<h2>Portfolio</h2>	
-			</div>
-			<ul class="portfolio__list">
-				<li class="portfolio__item">
-					<img class="portfolio__img" src="./img/Portfolio1.jpg" alt="Online fashion store">	
-					<a class="portfolio__link" href="https://www.online-fashion.ru/		">Online fashion store- Homepage</a>
-				</li>
-				<li class="portfolio__item">
-					<img  class="portfolio__img" src="./img/Portfolio2.jpg" alt="Reebok Store">	
-					<a class="portfolio__link" href="https://www.reebok.ru/">	Reebok Store - Concept</a>
-				</li>
-				<li class="portfolio__item">
-					<img class="portfolio__img" src="./img/Portfolio3.jpg" alt="Braun Landing Page - Concept">	
-					<a class="portfolio__link" href="https://braun-russia.ru/">	Braun Landing Page - Concept</a>
-				</li>
-			</ul>
+			<div class="portfolio__wrapper">
+				<div class="portfolio__h">
+						<h2>Portfolio</h2>	
+				</div>
+				<ul class="portfolio__list">
+					<li class="portfolio__item">
+						<img class="portfolio__img" src="./img/Portfolio1.jpg" alt="Online fashion store">	
+						<a class="portfolio__link" href="https://www.online-fashion.ru/		">Online fashion store- Homepage</a>
+					</li>
+					<li class="portfolio__item">
+						<img  class="portfolio__img" src="./img/Portfolio2.jpg" alt="Reebok Store">	
+						<a class="portfolio__link" href="https://www.reebok.ru/">	Reebok Store - Concept</a>
+					</li>
+					<li class="portfolio__item">
+						<img class="portfolio__img" src="./img/Portfolio3.jpg" alt="Braun Landing Page - Concept">	
+						<a class="portfolio__link" href="https://braun-russia.ru/">	Braun Landing Page - Concept</a>
+					</li>
+				</ul>
+			</div>	
 		</div>
 	</div>
 
 
 	<!--comtacts-->
 	<div class="contacts" id='contacts'>
-		<div class="contacts__h2">
-			<h2>Contacts</h2>
-		</div>
-		<div class="contacts__h3">
-			<h3>Want to know more or just chat?</h3>
-			<h3>You are welcome!</h3>
-		</div>
-		<a class= "btn btn--black" href="https://mail.google.com/mail/u/0/#inbox">Send message</a>
-		<div class="contacts__iconlist">
-			<div class="contacts__iconeitem">
-				<a href="https://www.linkedin.com/">
-					<img src="./img/contacts1.png" alt="linkedin" href="https://braun-russia.ru/">
-				</a>
+		<div class="contact__wrapper">	
+			<div class="contacts__h2">
+				<h2>Contacts</h2>
 			</div>
-			<div class="contacts__iconeitem">
-				<a href="https://www.instagram.com/">	
-					<img src="./img/contacts2.png" alt="instagram" href="https://braun-russia.ru/">
-				</a>
+			<div class="contacts__h3">
+				<h3>Want to know more or just chat?</h3>
+				<h3>You are welcome!</h3>
 			</div>
-			<div class="contacts__iconeitem">
-				<a href="https://www.behance.net/">
-					<img src="./img/contacts3.png" alt="behance" href="https://braun-russia.ru/">
-				</a>
+			<a class= "btn btn--black" href="https://mail.google.com/mail/u/0/#inbox">Send message</a>
+			<div class="contacts__iconlist">
+				<div class="contacts__iconeitem">
+					<a href="https://www.linkedin.com/">
+						<img src="./img/contacts1.png" alt="linkedin" href="https://braun-russia.ru/">
+					</a>
+				</div>
+				<div class="contacts__iconeitem">
+					<a href="https://www.instagram.com/">	
+						<img src="./img/contacts2.png" alt="instagram" href="https://braun-russia.ru/">
+					</a>
+				</div>
+				<div class="contacts__iconeitem">
+					<a href="https://www.behance.net/">
+						<img src="./img/contacts3.png" alt="behance" href="https://braun-russia.ru/">
+					</a>
+				</div>
+				<div class="contacts__iconeitem">
+					<a href="https://dribbble.com/">
+						<img src="./img/contacts4.png" alt="dribbble" href="https://braun-russia.ru/">
+					</a>
+				</div>
 			</div>
-			<div class="contacts__iconeitem">
-				<a href="https://dribbble.com/">
-					<img src="./img/contacts4.png" alt="dribbble" href="https://braun-russia.ru/">
-				</a>
+			<div class="contacts__footer">
+					<p>Like me on</p>
+					<p>LinkedIn, Instagram, Behance, Dribble</p>
 			</div>
-		</div>
-		<div class="contacts__footer">
-				<p>Like me on</p>
-				<p>LinkedIn, Instagram, Behance, Dribble</p>
-		</div>
+		</div>	
 	</div>
 </body>
 </html>
