--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<p>UX | UI designer</p>
 						<p>24 years old, Minsk</p>
 					</div>
-					<p class="intro__vertical">RU | ENG</p> 
+					<p class="intro__vertical" id='language'>RU | ENG</p> 
 				</div>
 				<div class="IMGTEST">
 			</div>
@@ -90,7 +90,7 @@
 				<div class="skills__panel">
 					<ul class="skills__list">
 						<li class="skills__item">
-							<div class="ims__skill">
+							<div class="img__skill">
 								<img src="./img/ps.png" alt="Adobe Photoshop">
 							</div>
 							<div class="name__skill">
@@ -98,7 +98,7 @@
 							</div>
 							<div class="panel__star">
 								<div class="star__element">
-									<img src="./img/Star.png" alt="">	
+									<img src="./img/Star.png" alt="" >	
 								</div>
 								<div class="star__element">
 									<img src="./img/Star.png" alt="">	
@@ -115,7 +115,7 @@
 							</div>
 						</li>
 						<li class="skills__item">
-							<div class="ims__skill">
+							<div class="img__skill">
 								<img src="./img/ai.png" alt="Adobe Illustrator">
 							</div>
 							<div class="name__skill">
@@ -140,7 +140,7 @@
 							</div>
 						</li>
 						<li class="skills__item">
-							<div class="ims__skill">
+							<div class="img__skill">
 								<img src="./img/ae.png" alt="Adobe After Effects">
 							</div>
 							<div class="name__skill">
@@ -165,7 +165,7 @@
 							</div>
 						</li>
 						<li class="skills__item">
-							<div class="ims__skill">
+							<div class="img__skill">
 								<img src="./img/fg.png" alt="Figma">
 							</div>
 							<div class="name__skill">
